# libmrhpsb

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Classes/: Classes.rst
doc/source/Classes/_Internal/libmrhpsb_Directory/Event/: MRH_EventHandler.rst
doc/source/Classes/_Internal/libmrhpsb_Directory/ThreadPool/: MRH_ThreadPool.rst
doc/source/Classes/_Internal/libmrhpsb_Directory/ThreadPool/Callback/: MRH_PSBReset.rst
doc/source/Classes/libmrhpsb/: libmrhpsb.rst
doc/source/Classes/libmrhpsb_Directory/: MRH_Callback.rst  MRH_EventStorage.rst  MRH_PSBException.rst  MRH_PSBLogger.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/_Internal/libmrhpsb/: MRH_Parameters.rst
doc/source/Enumerations/libmrhpsb_Directory/MRH_PSBLogger/: LogLevel.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrhpsb_Directory/Event/MRH_EventHandler/: CheckLibraryError.rst  Exit.rst  GetRemainingEvents.rst  MRH_EventHandler_0.rst  MRH_EventHandler_1.rst  RecieveEvents.rst  SendEvents.rst  ~MRH_EventHandler.rst
doc/source/Functions/_Internal/libmrhpsb_Directory/MRH_Locale/: LoadSystemLocale.rst
doc/source/Functions/_Internal/libmrhpsb_Directory/ThreadPool/Callback/MRH_PSBReset/: Callback.rst  MRH_PSBReset_0.rst  ~MRH_PSBReset.rst
doc/source/Functions/_Internal/libmrhpsb_Directory/ThreadPool/MRH_ThreadPool/: AddCallback.rst  AddJob.rst  MRH_ThreadPool_0.rst  Update.rst  ~MRH_ThreadPool.rst
doc/source/Functions/libmrhpsb/: AddCallback.rst  IsValidEventType.rst  SignalHandler.rst  Update.rst  libmrhpsb_0.rst  ~libmrhpsb.rst
doc/source/Functions/libmrhpsb_Directory/MRH_Callback/: Callback.rst  MRH_Callback_0.rst  ~MRH_Callback.rst
doc/source/Functions/libmrhpsb_Directory/MRH_EventStorage/: Add.rst  Add_0.rst  Add_1.rst  Clear.rst  GetCount.rst  GetEvent.rst  MRH_EventStorage_0.rst  RemoveFront.rst  Singleton.rst  ~MRH_EventStorage.rst
doc/source/Functions/libmrhpsb_Directory/MRH_PSBException/: MRH_PSBException_0.rst  MRH_PSBException_1.rst  what.rst  what2.rst  ~MRH_PSBException.rst
doc/source/Functions/libmrhpsb_Directory/MRH_PSBLogger/: Backtrace.rst  GetLevelString.rst  Log.rst  MRH_PSBLogger_0.rst  OpenFiles.rst  Singleton.rst  WriteBacktrace.rst  ~MRH_PSBLogger.rst
doc/source/Functions/libmrhpsb_Directory/MRH_PSBRevision/: MRH_GetLibraryVersionMajor.rst  MRH_GetLibraryVersionMinor.rst  MRH_GetLibraryVersionPatch.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/_Internal/libmrhpsb_Directory/MRH_EventStorage/: MRH_EVENT_STORAGE_RESERVE_STEP.rst
doc/source/Macros/_Internal/libmrhpsb_Directory/MRH_Locale/: MRH_LOCALE_FILE_PATH.rst
doc/source/Macros/_Internal/libmrhpsb_Directory/MRH_PSBLogger/: MRH_LOGGER_PRINT_CLI.rst  MRH_PLATFORM_SERVICE_BACKTRACE_FILE_PATH_BASE.rst  MRH_PLATFORM_SERVICE_LOG_FILE_PATH_BASE.rst
doc/source/Macros/_Internal/libmrhpsb_Directory/ThreadPool/Callback/MRH_PSBReset/: MRH_LOCALE_FILE_PATH.rst
doc/source/Macros/libmrhpsb_Directory/MRH_PSBRevision/: MRH_PLATFORM_SERVICE_BASE_LIB_VERSION_MAJOR.rst  MRH_PLATFORM_SERVICE_BASE_LIB_VERSION_MINOR.rst  MRH_PLATFORM_SERVICE_BASE_LIB_VERSION_PATCH.rst
doc/source/Namespaces/: Namespaces.rst
doc/source/Namespaces/_Internal/libmrhpsb_Directory/: MRH_Locale.rst
doc/source/Namespaces/libmrhpsb_Directory/: MRH_PlatformServiceBaseRevision.rst
include/libmrhpsb/: libmrhpsb.h
include/libmrhpsb/libmrhpsb/: MRH_Callback.h  MRH_EventStorage.h  MRH_PSBException.h  MRH_PSBLogger.h  MRH_PSBRevision.h
src/: libmrhpsb.cpp
src/libmrhpsb/: MRH_Callback.cpp  MRH_EventStorage.cpp  MRH_Locale.cpp  MRH_Locale.h  MRH_PSBLogger.cpp  MRH_PSBRevision.cpp
src/libmrhpsb/Event/: MRH_EventHandler.cpp  MRH_EventHandler.h
src/libmrhpsb/ThreadPool/: MRH_ThreadPool.cpp  MRH_ThreadPool.h
src/libmrhpsb/ThreadPool/Callback/: MRH_PSBReset.cpp  MRH_PSBReset.h
